<resources>
    <string name="app_name">SingleScreenApp</string>
    <string name="school_name">VIA University College</string>

    <string name="address_title">Address:</string>
    <string name="address_campus">Chr M Østergaards Vej 4, Horsens</string>
    <string name="students_title">Number of students: </string>
    <string name="students">20,000</string>
    <string name="desc_title">Description</string>
    <string name="description">VIA University College is a university college organisation in Central Denmark , established in January 2008.
        It is present in the region with a total of eight campuses.
        Campus Horsens holds most of the engineering, technical and business programmes of VIA University College.
        The increasing campus population is now around 4,000 students – of whom approx. half are international students.</string>

    <string name="button_sign_up">Sign up</string>

    <string name="place_description">Place</string>
    <string name="student_description">Students</string>
</resources>
